# advent2016

./: .gitignore  LICENSE  README.md  advent.cabal
app/: Main.hs
src/: Advent1.hs  Advent2.hs  Advent3.hs  Advent4.hs  Lib.hs
