name:                advent
version:             0.1.0.0
synopsis:            Answers to Advent of Code 2016 written in Haskell
description:         Answers to Advent of Code 2016 written in Haskell
homepage:            https://github.com/chiguire/advent2016
license:             BSD3
license-file:        LICENSE
author:              Ciro Duran
maintainer:          ciro.duran@gmail.com
copyright:           2017 Ciro Duran
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Advent1, Advent2
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable advent-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
  default-language:    Haskell2010

test-suite ciro-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chiguire/advent
